syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "EquipRelic.proto";
import "AvatarSkillTree.proto";

message Avatar {
	uint32 exp = 1;
	repeated AvatarSkillTree skilltree_list = 3;
	uint32 dressed_skin_id = 2;
	uint32 rank = 9;
	uint32 level = 5;
	uint32 promotion = 8;
	repeated uint32 taken_rewards = 11;
	uint32 equipment_unique_id = 15;
	uint32 base_avatar_id = 10;
	uint64 first_met_timestamp = 13;
	bool is_marked = 7;
	repeated EquipRelic equip_relic_list = 12;
}