syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ExtraLineupType.proto";
import "ChallengeStatus.proto";
import "ChallengeStoryInfo.proto";

message ChallengeInfo {
	uint32 score_two = 5;
	//repeated DPEFJFDABMM archive_monster_id_list = 10;
	uint32 score = 14;
	ExtraLineupType extra_lineup_type = 11;
	uint32 challenge_id = 4;
	ChallengeStoryInfo start_info = 7;
	uint32 round_count = 13;
	uint32 MFNKAALBLKD = 6;
	ChallengeStatus status = 1;
}