syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message ChallengeReward {
	uint64 taken_challenge_reward = 3;
	uint32 group_id = 1;
}