syntax = "proto3";

option java_package = "emu.lunarcore.proto";

// Ofoekmkibeh
message StartChallengeBossBuffInfo {
    uint32 boss_buff_two = 2;
    uint32 boss_buff_one = 1;
}