syntax = "proto3";

option java_package = "emu.lunarcore.proto";

// DNAGCIGANAK
message StartPartialChallengeCsReq {
	bool is_first_half = 5; // IDEEBBHHEDI
	uint32 challenge_id = 10;
	uint32 buff_id = 9; // JGDMLOFCNCH
}