syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "ItemList.proto";

message TakenChallengeRewardInfo {
	uint32 star_count = 5;
	ItemList reward = 11;
}